helm/ping-directory/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-directory-lb-svc
  namespace: ciam-dev
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
    service.beta.kubernetes.io/azure-load-balancer-internal-subnet: "snet-aks-lb-ciam-dev-uaenorth-001"
spec:
  type: LoadBalancer
  ports:
   - name: ldaps
     port: 636           # Port on the load balancer
     targetPort: 1636    # Port on the backend pods
  selector:
    app.kubernetes.io/name: pingdirectory
