helm/ping-directory/ingress-pingdirectory.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingdirectory-ingress-internal
  namespace: ciam-dev
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx-internal
  rules:
  - host: ping-directory.dev.ciam-portal.internal  # Replace with your actual domain
    http:
      paths:
      - backend:
          service:
            name: pingdirectory
            port:
              number: 443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ping-directory.dev.ciam-portal.internal  # Same domain as above
    secretName: ping-secret # Replace with the name of your TLS secret
